# unifi-requests

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/requests_unifi_auth/: __init__.py
src/unifi_requests/: cli.py
