[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "requests-unifi-auth"
version = "0.1.3"
description = "Ubiquiti Unifi Controller API authorization class for python requests library. Takes care of authentification and CSRF handling."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Roman Akinfeev", email = "akinfold@gmail.com" }]
keywords = ["unifi", "ubiquiti", "api", "networking", "controller", "requests"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = ["requests>=2.25"]

[project.urls]
Homepage = "https://github.com/akinfold/requests-unifi-auth"
Source = "https://github.com/akinfold/requests-unifi-auth"

[tool.setuptools.packages.find]
where = ["src"]

[tool.bumpversion]
current_version = "0.1.3"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Release v{new_version}"
allow_dirty = false
commit = true
message = "chore: Bump version {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "src/requests_unifi_auth/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
